Updates for reactivity

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.jwebmp.plugins</groupId>
             <artifactId>web-awesome</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.jwebmp.core</groupId>
+            <artifactId>jwebmp-testlib</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
